fix(title):images and text below of the image

--- a/index.html
+++ b/index.html
@@ -26,15 +26,23 @@
                 <p>Engineer Student / Data Analyst </p>
                 <section class="networks">
                     <a href="https://www.linkedin.com/in/pablo-garrido-hern%C3%A1ndez-067b90233/" target="blank">
-                        <img src="./iconos/linkedin.png" alt="LinkedIn">
+                        <img src="./iconos/link.png" alt="LinkedIn">
+                        <span>LinkedIn</span>
                     </a>
 
                     <a href="https://github.com/PablomxH" target="blank">
                         <img src="./iconos/git.png" alt="GitHub">
+                        <span>GitHub</span>
                     </a>
 
                     <a href="https://drive.google.com/file/d/1chFTzJF5287GmeFDlGpa9shbnkDFOA7S/view?usp=sharing" target="blank">
                         <img src="./iconos/cv.png" alt="CV">
+                        <span>Resumé</span>
+                    </a>
+
+                    <a href="https://linktr.ee/pablomxh" target="blank">
+                        <img src="./iconos/tree.png" alt="Linktree">
+                        <span>More Social Networks</span>
                     </a>
 
                 </section>
