feat(title):Hover buttons,image of linktree

--- a/index.html
+++ b/index.html
@@ -25,25 +25,34 @@
                 <h1 id="present">Hi I'm Pablo Garrido</h1>
                 <p>Engineer Student / Data Analyst </p>
                 <section class="networks">
-                    <a href="https://www.linkedin.com/in/pablo-garrido-hern%C3%A1ndez-067b90233/" target="blank">
-                        <img src="./iconos/link.png" alt="LinkedIn">
-                        <span>LinkedIn</span>
-                    </a>
 
-                    <a href="https://github.com/PablomxH" target="blank">
-                        <img src="./iconos/git.png" alt="GitHub">
-                        <span>GitHub</span>
-                    </a>
+                    <div class="bubble">
+                        <a href="https://drive.google.com/file/d/1chFTzJF5287GmeFDlGpa9shbnkDFOA7S/view?usp=sharing" target="blank">
+                            <img src="./iconos/cv.png" alt="CV">
+                            <span>Resumé</span>
+                        </a>
+                    </div>
 
-                    <a href="https://drive.google.com/file/d/1chFTzJF5287GmeFDlGpa9shbnkDFOA7S/view?usp=sharing" target="blank">
-                        <img src="./iconos/cv.png" alt="CV">
-                        <span>Resumé</span>
-                    </a>
+                    <div class="bubble">
+                        <a href="https://github.com/PablomxH" target="blank">
+                            <img src="./iconos/git.png" alt="GitHub">
+                            <span>GitHub</span>
+                        </a>
+                    </div>
 
-                    <a href="https://linktr.ee/pablomxh" target="blank">
-                        <img src="./iconos/tree.png" alt="Linktree">
-                        <span>More Social Networks</span>
-                    </a>
+                    <div class="bubble">
+                        <a href="https://www.linkedin.com/in/pablo-garrido-hern%C3%A1ndez-067b90233/" target="blank">
+                            <img src="./iconos/link.png" alt="LinkedIn">
+                            <span>LinkedIn</span>
+                        </a>
+                    </div>
+
+                    <div class="bubble">
+                        <a href="https://linktr.ee/pablomxh" target="blank">
+                            <img src="./iconos/tree.png" alt="Linktree">
+                            <span>Others</span>
+                        </a>
+                    </div>
 
                 </section>
             
