feat(seccion1):Wrote about me, custom in the css for seccion 1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="header">
-        <h1>Welcome to my portfolio</h1>
+        <h1 id="header-text">Welcome to my portfolio</h1>
     </div>
     <div id="container">
         <div id="sidebar">
@@ -60,7 +60,11 @@
 
             <section>
                 <h1 id="seccion1">About me...</h1>
-                <p>Contenido de la sección 1...</p>
+                <p>Mechatronics Technician and Mechatronics Engineering student, currently focused on developing my skills, I am seeking to collaborate in teams and projects where I can provide tangible results.<br><br>
+
+                    I am a technology enthusiast and an organized professional, with an ability to adapt easily and a strong willingness to learn. I enjoy working in teams and providing support in any necessary task to make a meaningful contribution.<br><br>
+                
+                </p>
             </section>
 
             <section>
