feat(sidebar): custom for the bottoms

--- a/index.html
+++ b/index.html
@@ -13,13 +13,30 @@
     </div>
     <div id="container">
         <div id="sidebar">
-            <ul>
-                <li><a href="#seccion1">About me</a></li>
-                <li><a href="#seccion2">Tech stack</a></li>
-                <li><a href="#seccion3">Profesional Education</a></li>
-                <li><a href="#seccion4">Projects</a></li>
-            </ul>
+            <section class="bar">
+                <div class="menu">
+                    <a href="#seccion1" class="mini">
+                        <span>About me</span>
+                    </a>
+                </div>
+                <div class="menu">
+                    <a href="#seccion2"class="mini">
+                        <span>Tech stack</span>
+                    </a>
+                </div>
+                <div class="menu">
+                    <a href="#seccion3"class="mini">
+                        <span>Profesional Education</span>
+                    </a>
+                </div>
+                <div class="menu">
+                    <a href="#seccion4"class="mini">
+                        <span>Projects</span>
+                    </a>
+                </div>
+            </section>
         </div>
+
         <div id="content">
             <section class="title">
                 <h1 id="present">Hi I'm Pablo Garrido</h1>
