feat(js/html): Dynamic page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Pablo Garrido</title>
     <link rel="stylesheet" href="./styles.css"
 </head>
-
 <body>
     <div id="header">
         <h1 id="header-text">Welcome to my portfolio</h1>
@@ -15,22 +14,22 @@
         <div id="sidebar">
             <section class="bar">
                 <div class="menu">
-                    <a href="#seccion1" class="mini">
+                    <a href="#seccion1" class="mini" id="PabloAbout">
                         <span>About me</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#seccion2"class="mini">
+                    <a href="#seccion2"class="mini" id="Pablostack">
                         <span>Tech stack</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#seccion3"class="mini">
+                    <a href="#seccion3"class="mini" id="PabloEdu">
                         <span>Profesional Education</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#seccion4"class="mini">
+                    <a href="#seccion4"class="mini" id="PabloPro">
                         <span>Projects</span>
                     </a>
                 </div>
@@ -38,7 +37,7 @@
         </div>
 
         <div id="content">
-            <section class="title">
+            <section class="title" id="title2">
                 <h1 id="present">Hi I'm Pablo Garrido</h1>
                 <p>Engineer Student / Data Analyst </p>
                 <section class="networks">
@@ -75,7 +74,7 @@
             
             </section>
 
-            <section>
+            <section class="about" id="about2">
                 <h1 id="seccion1">About me...</h1>
                 <p>Mechatronics Technician and Mechatronics Engineering student, currently focused on developing my skills, I am seeking to collaborate in teams and projects where I can provide tangible results.<br><br>
 
@@ -84,22 +83,23 @@
                 </p>
             </section>
 
-            <section>
+            <section id="stack2">
                 <h1 id="seccion2">Tech Stack</h1>
                 <p>Contenido de la sección 2...</p>
             </section>
 
-            <section>
+            <section id="education2">
                 <h1 id="seccion3">Profesional Education</h1>
                 <p>Contenido de la sección 3...</p>
             </section>
 
-            <section>
+            <section id="projects2">
                 <h1 id="seccion4">Projects</h1>
                 <p>Contenido de la sección 4...</p>
             </section>
 
         </div>
     </div>
+    <script src="./set.js"></script>
 </body>
 </html>
