fix(href): Correct ref in seccion about

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <div id="sidebar">
             <section class="bar">
                 <div class="menu">
-                    <a href="#seccion1" class="mini" id="PabloAbout">
+                    <a href="#about me" class="mini" id="PabloAbout">
                         <span>About me</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#seccion2"class="mini" id="Pablostack">
+                    <a href="#Tech_Stack"class="mini" id="Pablostack">
                         <span>Tech stack</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#seccion3"class="mini" id="PabloEdu">
+                    <a href="#Profesional_Education"class="mini" id="PabloEdu">
                         <span>Profesional Education</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#seccion4"class="mini" id="PabloPro">
+                    <a href="#my_projects"class="mini" id="PabloPro">
                         <span>Projects</span>
                     </a>
                 </div>
@@ -38,7 +38,7 @@
 
         <div id="content">
             <section class="title" id="title2">
-                <h1 id="present">Hi I'm Pablo Garrido</h1>
+                <h1 id="about_me">Hi I'm Pablo Garrido</h1>
                 <p>Engineer Student / Data Analyst </p>
                 <section class="networks">
 
@@ -84,17 +84,17 @@
             </section>
 
             <section id="stack2">
-                <h1 id="seccion2">Tech Stack</h1>
+                <h1 id="Tech_Stack">Tech Stack</h1>
                 <p>Contenido de la sección 2...</p>
             </section>
 
             <section id="education2">
-                <h1 id="seccion3">Profesional Education</h1>
+                <h1 id="Profesional_Education">Profesional Education</h1>
                 <p>Contenido de la sección 3...</p>
             </section>
 
             <section id="projects2">
-                <h1 id="seccion4">Projects</h1>
+                <h1 id="my_projects">Projects</h1>
                 <p>Contenido de la sección 4...</p>
             </section>
 
