style(href): Just like a comment the href

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <div id="sidebar">
             <section class="bar">
                 <div class="menu">
-                    <a href="#about me" class="mini" id="PabloAbout">
+                    <a class="mini" id="PabloAbout"> <!-- href="#about me"  -->
                         <span>About me</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#Tech_Stack"class="mini" id="Pablostack">
+                    <a class="mini" id="Pablostack"> <!-- href="#Tech_Stack" -->
                         <span>Tech stack</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#Profesional_Education"class="mini" id="PabloEdu">
+                    <a class="mini" id="PabloEdu">    <!-- href="#Profesional_Education" -->
                         <span>Profesional Education</span>
                     </a>
                 </div>
                 <div class="menu">
-                    <a href="#my_projects"class="mini" id="PabloPro">
+                    <a class="mini" id="PabloPro">  <!-- href="#my_projects" -->
                         <span>Projects</span>
                     </a>
                 </div>
