feat(tech stach):pictures and description for tech stach

--- a/index.html
+++ b/index.html
@@ -86,6 +86,57 @@
             <section id="stack2">
                 <h1 id="Tech_Stack">Tech Stack</h1>
                 <p>Contenido de la sección 2...</p>
+                <section class="techs">
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/python.png">
+                            <span>Numpy, Pandas, Matplotlib, Seaborn, cv2</span>
+                        </a>
+                    </div>
+
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/sql.png">
+                            <span>MySQL, SQLiteStudio</span>
+                        </a>
+                    </div>
+
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/git.png">
+                            <span>Git y GitHub</span>
+                        </a>
+                    </div class="techsquare">
+
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/front.png">
+                            <span>html5, CSS3, JS</span>
+                        </a>
+                    </div>
+
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/matlab.jpg">
+                            <span>Matlab,Octave</span>
+                        </a>
+                    </div>
+
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/plc.png">
+                            <span>PLC Phoenix Contact, Siemens, ESP32, Arduino </span>
+                        </a>
+                    </div>
+
+                    <div class="techsquare">
+                        <a>
+                            <img src="./iconos/tech_stack/cad.png">
+                            <span>CATIA, SolidWorks</span>
+                        </a>
+                    </div>
+
+                </section>
             </section>
 
             <section id="education2">
