--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Garrido</title>
+    <link rel="icon" type="image/x-icon" href="./icon.png" />
     <link rel="stylesheet" href="./styles.css"
 </head>
 <body>
@@ -85,7 +86,7 @@
 
             <section id="stack2">
                 <h1 id="Tech_Stack">Tech Stack</h1>
-                <p>Contenido de la sección 2...</p>
+                <p>The Technology Behind: A mix of Python's data prowess, SQL's database management, and front-end expertise coming together for impactful projects.</p>
                 <section class="techs">
                     <div class="techsquare">
                         <a>
