feat(education):Pics and descripiton for education

--- a/index.html
+++ b/index.html
@@ -142,7 +142,60 @@
 
             <section id="education2">
                 <h1 id="Profesional_Education">Profesional Education</h1>
-                <p>Contenido de la sección 3...</p>
+                <p></p>
+                <section>
+                    <div class="shield">
+
+                        <div class="shield_box">
+                            <li class="shield_box_img">
+                                <img src="./iconos/education_pics/utp.png">
+                            </li>
+                            <li class="shield_box_title">
+                                <p>UTP</p>
+                            </li>
+                            <li class="shield_box_subtitle">
+                                <p>Degree in Mechatronics Engineering</p>
+                            </li>
+                        </div>
+
+                        <div class="shield_box">
+                            <li class="shield_box_img">
+                                <img src="./iconos/education_pics/platzi.png">
+                            </li>
+                            <li class="shield_box_title">
+                                <p>Platzi</p>
+                            </li>
+                            <li class="shield_box_subtitle">
+                                <p>Data Scientist</p>
+                            </li>
+                        </div>
+
+                        <div class="shield_box">
+                            <li class="shield_box_img">
+                                <img src="./iconos/education_pics/bedu.png">
+                            </li>
+                            <li class="shield_box_title">
+                                <p>BEDU</p>
+                            </li>
+                            <li class="shield_box_subtitle">
+                                <p>Data Scientist</p>
+                            </li>
+                        </div>
+
+                        <div class="shield_box">
+                            <li class="shield_box_img">
+                                <img src="./iconos/education_pics/cerhan.png">
+                            </li>
+                            <li class="shield_box_title">
+                                <p>CERHAN</p>
+                            </li>
+                            <li class="shield_box_subtitle">
+                                <p>Handling of robotic cells with VKRC4.</p>
+                            </li>
+                        </div>
+                        
+                    </div>
+                </section>
             </section>
 
             <section id="projects2">
