feat(education/tech): Spaces in tech and education

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/python.png">
+                            <span class="techsquare_title">Python</span>
                             <span>Numpy, Pandas, Matplotlib, Seaborn, cv2</span>
                         </a>
                     </div>
@@ -98,6 +99,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/sql.png">
+                            <span class="techsquare_title">Databases</span>
                             <span>MySQL, SQLiteStudio</span>
                         </a>
                     </div>
@@ -105,6 +107,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/git.png">
+                            <span class="techsquare_title">Version control</span>
                             <span>Git y GitHub</span>
                         </a>
                     </div class="techsquare">
@@ -112,6 +115,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/front.png">
+                            <span class="techsquare_title">Front-End</span>
                             <span>html5, CSS3, JS</span>
                         </a>
                     </div>
@@ -119,6 +123,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/matlab.jpg">
+                            <span class="techsquare_title">Numerical computation</span>
                             <span>Matlab,Octave</span>
                         </a>
                     </div>
@@ -126,6 +131,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/plc.png">
+                            <span class="techsquare_title">Devices</span>
                             <span>PLC Phoenix Contact, Siemens, ESP32, Arduino </span>
                         </a>
                     </div>
@@ -133,6 +139,7 @@
                     <div class="techsquare">
                         <a>
                             <img src="./iconos/tech_stack/cad.png">
+                            <span class="techsquare_title">Design</span>
                             <span>CATIA, SolidWorks</span>
                         </a>
                     </div>
@@ -147,53 +154,37 @@
                     <div class="shield">
 
                         <div class="shield_box">
-                            <li class="shield_box_img">
+                            <a>
                                 <img src="./iconos/education_pics/utp.png">
-                            </li>
-                            <li class="shield_box_title">
-                                <p>UTP</p>
-                            </li>
-                            <li class="shield_box_subtitle">
-                                <p>Degree in Mechatronics Engineering</p>
-                            </li>
+                                <span class="shield_box_title">UTP</span>
+                                <span>Degree in Mechatronics Engineering</span>
+                            </a>
                         </div>
 
                         <div class="shield_box">
-                            <li class="shield_box_img">
+                            <a>
                                 <img src="./iconos/education_pics/platzi.png">
-                            </li>
-                            <li class="shield_box_title">
-                                <p>Platzi</p>
-                            </li>
-                            <li class="shield_box_subtitle">
-                                <p>Data Scientist</p>
-                            </li>
+                                <span class="shield_box_title">Platzi</span>
+                                <span>Data Scientist</span>
+                            </a>
                         </div>
 
                         <div class="shield_box">
-                            <li class="shield_box_img">
+                            <a>
                                 <img src="./iconos/education_pics/bedu.png">
-                            </li>
-                            <li class="shield_box_title">
-                                <p>BEDU</p>
-                            </li>
-                            <li class="shield_box_subtitle">
-                                <p>Data Scientist</p>
-                            </li>
+                                <span class="shield_box_title">BEDU</span>
+                                <span>Data Scientist</span>
+                            </a>
                         </div>
 
                         <div class="shield_box">
-                            <li class="shield_box_img">
+                            <a>
                                 <img src="./iconos/education_pics/cerhan.png">
-                            </li>
-                            <li class="shield_box_title">
-                                <p>CERHAN</p>
-                            </li>
-                            <li class="shield_box_subtitle">
-                                <p>Handling of robotic cells with VKRC4.</p>
-                            </li>
+                                <span class="shield_box_title">CERHAN</span>
+                                <span>Handling of robotic cells with VKRC4.</span>
+                            </a>
                         </div>
-                        
+
                     </div>
                 </section>
             </section>
