fix(profesional_edu):a correct size for shield boxes

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <section id="education2">
                 <h1 id="Profesional_Education">Profesional Education</h1>
                 <p></p>
-                <section>
+                <section class="main_shield">
                     <div class="shield">
 
                         <div class="shield_box">
