feat(html):change in te order of the sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pablo Garrido</title>
     <link rel="icon" type="image/x-icon" href="./icon.png" />
-    <link rel="stylesheet" href="./styles.css"
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div id="header">
@@ -20,6 +20,11 @@
                     </a>
                 </div>
                 <div class="menu">
+                    <a class="mini" id="PabloPro">  <!-- href="#my_projects" -->
+                        <span>Projects</span>
+                    </a>
+                </div>
+                <div class="menu">
                     <a class="mini" id="Pablostack"> <!-- href="#Tech_Stack" -->
                         <span>Tech stack</span>
                     </a>
@@ -27,11 +32,6 @@
                 <div class="menu">
                     <a class="mini" id="PabloEdu">    <!-- href="#Profesional_Education" -->
                         <span>Profesional Education</span>
-                    </a>
-                </div>
-                <div class="menu">
-                    <a class="mini" id="PabloPro">  <!-- href="#my_projects" -->
-                        <span>Projects</span>
                     </a>
                 </div>
             </section>
@@ -84,6 +84,11 @@
                 </p>
             </section>
 
+            <section id="projects2">
+                <h1 id="my_projects">Projects</h1>
+                <p>Contenido de la sección 4...</p>
+            </section>
+            
             <section id="stack2">
                 <h1 id="Tech_Stack">Tech Stack</h1>
                 <p>The Technology Behind: A mix of Python's data prowess, SQL's database management, and front-end expertise coming together for impactful projects.</p>
@@ -188,12 +193,6 @@
                     </div>
                 </section>
             </section>
-
-            <section id="projects2">
-                <h1 id="my_projects">Projects</h1>
-                <p>Contenido de la sección 4...</p>
-            </section>
-
         </div>
     </div>
     <script src="./set.js"></script>
