fix(js):some errors

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     
                 </section>
 
-                <h2>More projects</h2>
+                <h2>More projects:</h2>
 
             </section>
             
