feat(head):Finally a picture of me

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div id="content">
             <section class="title" id="title2">
                 <h1 id="about_me">Hi I'm Pablo Garrido</h1>
+                <img src="./perfil.png" class="perfil">
                 <p>Engineer Student / Data Analyst </p>
                 <section class="networks">
 
