--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <section class="title" id="title2">
                 <h1 id="about_me">Hi I'm Pablo Garrido</h1>
                 <img src="./perfil.png" class="perfil">
-                <p>Engineer Student / Data Analyst </p>
+                <p>Engineer Student / Data Analyst / Python Developer</p>
                 <section class="networks">
 
                     <div class="bubble">
