update(about):Profile picture, logo

--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
                     <table>
                         <tr>
                             <td>Data Acquisition - Arduino and Octave</td>
-                            <td><a href="https://youtu.be/XuZGVALkzAA">Click here</a></td>
+                            <td><a id="links" href="https://youtu.be/XuZGVALkzAA">Click here</a></td>
                         </tr>
                         <tr>
                             <td>Project Development - Automatic Control Papers</td>
-                            <td><a href="https://drive.google.com/drive/folders/1PvR98D2nU4bKD9OIulkUlaJokPbRXaHU?usp=sharing">Click here</a></td>
+                            <td><a id="links" href="https://drive.google.com/drive/folders/1PvR98D2nU4bKD9OIulkUlaJokPbRXaHU?usp=sharing">Click here</a></td>
                         </tr>
                         <tr>
                             <td>Programming - Welding WPS</td>
-                            <td><a href="https://youtu.be/loZlmykrFds">Click here</a></td>
+                            <td><a id="links" href="https://youtu.be/loZlmykrFds">Click here</a></td>
                         </tr>
                         <tr>
                             <td>PLC Programming - S7-300</td>
-                            <td><a href="https://youtu.be/c9TMq_cqjjQ">Click here</a></td>
+                            <td><a id="links" href="https://youtu.be/c9TMq_cqjjQ">Click here</a></td>
                         </tr>
                     </table>
                 </section>
