--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="preloader-container">
+        <div class="loader"></div>
+    </div>
     <div id="header">
         <h1 id="header-text">Welcome to my portfolio</h1>
     </div>
@@ -257,6 +260,10 @@
                 </section>
             </section>
         </div>
+    </div>
+    <div class="credits">
+        <p>Made by Pablo Garrido Hdez - 2023</p>
+        <p>All photo credits belong to their respective authors. ©</p>
     </div>
     <script src="./set.js"></script>
 </body>
