feat(projects): Newproject

--- a/index.html
+++ b/index.html
@@ -97,12 +97,21 @@
                     <img src="./Projects/recognition.png" alt="Project 3" id="project3">
                     <img src="./Projects/pokemon.png" alt="Project 4" id="project4">    
                 </section>
+
+                <h2>Covid19 Data Analysis Notebook</h2>
+                <p>Data Analysis, CSV File Reading, Data Cleaning, Visualization, and Result Correlation.</p>
+                <section class="about_projects">
+                    <img src="./Projects/Covid/notebook1.png">
+                    <img src="./Projects/Covid/notebook2.png">
+                    <img src="./Projects/Covid/notebook3.png">
+                </section>
+
                 <h2>Population Analysis Notebook</h2>
                 <p>Data visualization project using Python as a foundation to create a browser with its corresponding error handling and personal modules for specific queries or graphics from the .csv file. Additionally, a table visualization notebook using Jupyter Notebooks, along with libraries such as Numpy, Pandas, Seaborn, and Matplotlib.</p>
                 <section class="about_projects">
-                    <img src="./Projects/Population_py/jupyter3.png">
-                    <img src="./Projects/Population_py/terminal2.png">
-                    <img src="./Projects/Population_py/terminal3.png">
+                <img src="./Projects/Population_py/jupyter3.png">
+                <img src="./Projects/Population_py/terminal2.png">
+                <img src="./Projects/Population_py/terminal3.png">
                 </section>
 
                 <h2>Programming KUKA and FANUC robots.</h2>
