fix(gral)responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         
         <div class="content-container">
-            <aside>
+            <aside id="sidebar">
                 <div class="menu">
                     <a class="mini" id="PabloAbout"> <!-- href="#about me"  -->
                         <span>About me</span>
