fix(js/html) interaction in the page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 </div>
             </aside>
 
-
-            <main>
+            <main id="tode">
                 <section class="uno" id="title2">
                     <h1 id="about_me">Hi I'm Pablo Garrido</h1>
                     <img src="./perfil.png" class="perfil">
@@ -302,6 +301,6 @@
             <p>All photo credits belong to their respective authors. ©</p>
         </div>
     </div>
-    <scrip src="./set.js"></scrip>
+    <script src="./set.js"></script>
 </body>
 </html>
