fix(js/html) last details about links

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                         <h1>Projects</h1>
                         <p>Latest projects, Click on the pictures or scroll to see more:</p>
                         <section class="main_projects">
-                            <img src="./Projects/data_viz_python.png" >
-                            <img src="./Projects/robotica.png" >
-                            <img src="./Projects/recognition.png" >
-                            <img src="./Projects/pokemon.png" >    
+                            <img src="./Projects/data_viz_python.png" id="project1">
+                            <img src="./Projects/robotica.png" id="project2">
+                            <img src="./Projects/recognition.png" id="project3">
+                            <img src="./Projects/pokemon.png" id="project4"> 
                         </section>
                     </section>
 
@@ -117,7 +117,7 @@
                         <h2>Population Analysis Notebook</h2>
                         <p>Data visualization project using Python as a foundation to create a browser with its corresponding error handling and personal modules for specific queries or graphics from the .csv file. Additionally, a table visualization notebook using Jupyter Notebooks, along with libraries such as Numpy, Pandas, Seaborn, and Matplotlib.</p>
                         <p id="readmore">
-                            <a href="https://github.com/PablomxH/COVID19-Data-Analysis-Using-Python" target="_blank">Read more...</a>
+                            <a href="https://github.com/PablomxH/Population-Data-Analysis-Using-Python" target="_blank">Read more...</a>
                         </p>                        
                         <section class="about_projects">
                         <img src="./Projects/Population_py/jupyter3.png">
@@ -130,7 +130,7 @@
                         <h2>Programming KUKA and FANUC robots.</h2>
                         <p>Programming of complete routines with material handling, robot interaction with the conveyor belt based on a presence sensor, use of timers, repeatability, and safety protocols without collisions.</p>
                         <p id="readmore">
-                            <a href="https://github.com/PablomxH/COVID19-Data-Analysis-Using-Python" target="_blank">Read more...</a>
+                            <a href="https://www.youtube.com/watch?v=c9TMq_cqjjQ" target="_blank">Read more...</a>
                         </p>                        
                         <section class="about_projects">
                             <img src="./Projects/Robótica/fanuc.png">
@@ -143,7 +143,7 @@
                         <h2>Facial recognition with Python.</h2>
                         <p>Facial recognition and face detection project using the OpenCV library and its various tools for recognition in photos or real-time videos.</p>
                         <p id="readmore">
-                            <a href="https://github.com/PablomxH/COVID19-Data-Analysis-Using-Python" target="_blank">Read more...</a>
+                            <a href="https://github.com/PablomxH/opencv" target="_blank">Read more...</a>
                         </p>                        
                         <section class="about_projects">
                             <img src="./Projects/Reconocimiento/foto.png">
@@ -156,7 +156,7 @@
                         <h2>Web-based Pokémon game.</h2>
                         <p>Project of creating a Pokémon game in the browser, FrontEnd programming, use of JavaScript for game dynamics, HTML layout, styling with CSS, introduction to Canvas, responsive design.</p>
                         <p id="readmore">
-                            <a href="https://github.com/PablomxH/COVID19-Data-Analysis-Using-Python" target="_blank">Read more...</a>
+                            <a href="https://github.com/PablomxH" target="_blank">Read more...</a>
                         </p>                        
                         <section class="about_projects">
                             <img src="./Projects/Pokemon/web.png".>
@@ -178,11 +178,11 @@
                             </tr>
                             <tr>
                                 <td>Programming - Welding WPS</td>
-                                <td><a id="links" href="https://youtu.be/loZlmykrFds" target="_blank">Click here</a></td>
+                                <td><a id="links" href="https://youtu.be/c9TMq_cqjjQ" target="_blank">Click here</a></td>
                             </tr>
                             <tr>
                                 <td>PLC Programming - S7-300</td>
-                                <td><a id="links" href="https://youtu.be/c9TMq_cqjjQ" target="_blank">Click here</a></td>
+                                <td><a id="links" href="https://youtu.be/loZlmykrFds" target="_blank">Click here</a></td>
                             </tr>
                         </table>
                     </section>
